--- a/elements/index.html
+++ b/elements/index.html
@@ -20,7 +20,7 @@
     <div class="api-container">
 
         <elements-api
-          apiDescriptionUrl="https://raw.githubusercontent.com/tvick90/counterbalance-public-api-docs/main/core-api.json"
+          apiDescriptionUrl="https://git.counterbalance.io/api/v4/projects/44/repository/files/v1.json/raw?ref=main"
           logo="https://static-assets.counterbalance.io/public/brand/icons/console/console-icon.png"
           router="history"
           basePath="/v1/reference"
